@@ -14,7 +14,27 @@ import java.util.Optional;
 
 @Repository
 public class OrganizationMockRepository implements OrganizationRepository {
-    private List<Organization> list = Arrays.asList(
+    private List<Organization> list;
+    public OrganizationMockRepository(){
+        this.list = Arrays.asList(
+                Organization.builder()
+                        .id("o1")
+                        .name("International Judo Federation IJF")
+                        .image("https://78884ca60822a34fb0e6-082b8fd5551e97bc65e327988b444396.ssl.cf3.rackcdn.com/icons/ijf_logo_300.png")
+                        .history("Historia que año se fundo y todo eso")
+                        .references(List.of("https://es.wikipedia.org/wiki/Federaci%C3%B3n_Internacional_de_Judo"))
+                        .judokasIds(new HashSet<>(List.of("j1")))
+                        .build(),
+                Organization.builder()
+                        .id("o2")
+                        .name("Confederación panamericana de judo CPJ")
+                        .image("https://panamjudo.org/Content/images/logo-CPJ.white.png")
+                        .history("Historia que año se fundo y todo eso")
+                        .references(List.of("https://panamjudo.org/es/c/acerca-de-la-cpj-4"))
+                        .build()
+                );
+    }
+    /*private List<Organization> list = Arrays.asList(
             Organization.builder()
                     .id("o1")
                     .name("International Judo Federation IJF")
@@ -30,7 +50,7 @@ public class OrganizationMockRepository implements OrganizationRepository {
                     .history("Historia que año se fundo y todo eso")
                     .references(List.of("https://panamjudo.org/es/c/acerca-de-la-cpj-4"))
                     .build()
-    );
+    );*/
 
     @Override
     public Flux<Organization> findAll() {
@@ -55,7 +75,7 @@ public class OrganizationMockRepository implements OrganizationRepository {
         System.out.println("AL repo llega: " + newOrganization.toString());
         newOrganization.setId("2");
         newOrganization.setJudokasIds(new HashSet<>());
-        //this.list.(newOrganization);
+        //this.list.add(newOrganization);
         System.out.println("Del repo sale: " + newOrganization.toString());
         return Mono.just(newOrganization);
     }
